back-end-complete-and-working

--- a/client/src/components/Cards/SingleCard.css
+++ b/client/src/components/Cards/SingleCard.css
@@ -1,4 +1,29 @@
 .single-card{
     text-decoration: none;
     color: black;
+    display: flex; 
+    flex-direction:column;
+    justify-content:center;
+    text-align: center;
+    padding: 5px 10px 5px 10px;
+    border: 0.5px solid gray;
+    border-radius: 4%;
+    font-size: 16px;
+    font-weight: 500;
+    /* backdrop-filter:blur(7.5px);  */
+    font-family: 'Quicksand', sans-serif;
+    box-shadow: 5px 1px 10px rgba(68, 66, 66, 0.2);
+    height: 430px;
+    width: 390px;
+    transition: all 250ms ease;
 }
+.single-card:hover{
+    box-shadow: 8px 1px 12px rgba(148, 147, 147, 0.664);  
+    transform: translateY(-2%);
+    
+}
+
+.dog-img{
+    border-radius: 12px;
+    padding: 5px 8px 5px 8px;
+} 
