--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,4 +1,9 @@
-.selected{
-    display: flex;
-    justify-content: space-evenly;
+.container-cards{
+    /* display:flex;
+    flex-wrap: wrap; */    
+    display: grid;
+    grid-template-columns: auto auto ;
+    grid-column-gap: 50px;
+    grid-row-gap: 25px;
+    justify-content: center;
 }
