--- a/client/src/components/Paginado/Paginado.css
+++ b/client/src/components/Paginado/Paginado.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-evenly;
 }
-
+/*
 .boton-paginado {
     border: 4px solid;
     border: white;
@@ -24,4 +24,4 @@
 
 .boton-paginado:hover:not(.active) {
     background-color: rgb(77, 41, 41);
-}
+} */
