--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-content: center;
     height:100vh;
-    background-image: url(https://cdn2.thedogapi.com/images/BFRYBufpm.jpg);
+    background-image: url(https://www.lookslikefilm.com/wp-content/uploads/2019/02/Michelle-Fernandes-Fox-www.wearefoxphotography.com_.jpg);
     background-attachment: fixed;
     background-size: cover;
 
