--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -2,13 +2,26 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.842);
     font-size: 20px;
     color: white;
     height:35px;
+    border: 1.3px solid rgba(255, 255, 255, 0.596);
   }
 
-.nav-link{
-    display: flex;
-    justify-content: space-around;
-  }
+.landing-link{
+  padding-top: 5px;
+  display: flex;
+  /* justify-self:flex-start; */
+  /* float: left; */
+}
+
+.links-nav{
+  display: flex;
+  flex-direction: row;
+
+}
+
+/* .active {
+  background-color: #04AA6D;
+} */
