starting-css-form

--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -19,7 +19,7 @@ body {
 
 h2 {
     position:sticky;
-    color: rgb(46, 97, 209);
+    color:  #009bcfdc;
     text-shadow: 1.5px 1.3px rgb(255, 255, 255);
 }
 
