--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -12,6 +12,69 @@
     background-attachment: fixed;
     background-size: cover;
     opacity: 0.75;
+    font-family: "Audiowide", sans-serif;
+    text-shadow: 1.3px 1.65px rgb(255, 255, 255);
+}
+
+.link-title {
+  display: flex;
+  justify-items: center;
+  align-content: center;
+  border: 2px green;
+}
+
+.input-form {
+  width: 100%;
+  padding: 12px 16px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 128, 0, 0.568);
+  border-radius: 6px;
+  font-family: "Audiowide", sans-serif;
+  font-size: 14px;
+  text-shadow: 1.6px 1.95px rgba(241, 235, 235, 0.753);
+}
+
+.input-form:focus{
+  background-color: rgba(109, 187, 212, 0.767);
+}
+
+.error {
+  color: red;
+  text-shadow: 1.6px 1.95px rgba(17, 13, 13, 0.753);
+  font-size: 22px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid white;
+  border-radius: 6px;
+  padding: 6px 15px;
+  margin: 8px 0;
+  background-color: rgba(165, 42, 42, 0.507);
+}
+
+.btn {
+  border: none;
+  border-radius: 4px;
+  background-color: #009bcfcb;
+  box-shadow: 4px 6px 6px rgba(0, 0, 0, 0.527);
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Audiowide", sans-serif;
+  text-shadow: 1.5px 1.3px rgb(238, 225, 225);
+  transition:  all;/* usaba >>background-color font-size cursor text-shadow >> "all"*/
+  transition-duration: 0.7s;
+}
+
+.btn:hover {
+  background-color: #4caf4fd3;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  text-shadow: 2.5px 2.3px rgba(20, 20, 20, 0.692);
+  box-shadow: 8px 10px 12px rgba(0, 0, 0, 0.527);
 }
 
 /* BACKGROUND IMAGE FAILED */
