--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,24 +1,38 @@
+/* .navbar-logo{
+  display: inline-block;
+  vertical-align: middle;
+  width: 70px;
+} */
+
 .NavBar {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:space-around;
     background-color: rgba(0, 0, 0, 0.842);
     font-size: 20px;
     color: white;
-    height:35px;
-    border: 1.3px solid rgba(255, 255, 255, 0.596);
+    height:75px;
+    border: 3.3px solid rgba(172, 55, 55, 0.596);
   }
 
 .landing-link{
-  padding-top: 5px;
+  padding-top: 10px 0px;
   display: flex;
-  /* justify-self:flex-start; */
-  /* float: left; */
+  justify-items:flex-end;
+  align-items: center;
+  flex-direction: row;
+  padding: 0 250px;
+  float: right;
+  border: 3px solid red;
 }
 
 .links-nav{
   display: flex;
   flex-direction: row;
+  justify-content:flex-end;
+  align-items: center;
+  padding: 0px 100px;
+  border: 4px solid blue;
 
 }
 
