--- a/client/src/components/Details/detail.css
+++ b/client/src/components/Details/detail.css
@@ -14,3 +14,9 @@
     min-height: 300px;
     box-shadow: 2px 2px 2px rgba(238, 234, 234, 0.527);
 }
+
+.loading{
+  background: url(https://fondosmil.com/fondo/41802.jpg) no-repeat center center fixed;
+  background-size: cover;
+  height: 100vh;
+}
