--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,41 +1,69 @@
-/* .navbar-logo{
-  display: inline-block;
-  vertical-align: middle;
-  width: 70px;
-} */
-
 .NavBar {
     display: flex;
     flex-direction: row;
-    justify-content:space-around;
+    align-items: center;
+    justify-content:space-evenly;
     background-color: rgba(0, 0, 0, 0.842);
     font-size: 20px;
     color: white;
-    height:75px;
-    border: 3.3px solid rgba(172, 55, 55, 0.596);
+    height:55px;
+    border: 1.3px solid rgba(255, 255, 255, 0.774);
+    
   }
 
-.landing-link{
-  padding-top: 10px 0px;
+.landing-link {
   display: flex;
-  justify-items:flex-end;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
-  padding: 0 250px;
-  float: right;
-  border: 3px solid red;
+  margin-right: 54%;
+
+}
+
+.dog-logo{
+  border: 0.1px solid rgb(240, 239, 245);
+  width: 40px;
+  height: 40px;
+  display:flex;
+  align-items: flex-start;
+  flex-direction: row;
+  background-image: url(../../images/logotipo2a.png);
+  justify-content: center;
+  background-size: 40px 40px;
+  background-position: 0px -0.1px; 
+  background-repeat: no-repeat;
+  border-radius: 50%;
+
 }
 
 .links-nav{
   display: flex;
   flex-direction: row;
-  justify-content:flex-end;
-  align-items: center;
-  padding: 0px 100px;
-  border: 4px solid blue;
+  justify-content: space-between;
+  /* border: 2px solid blue; */
 
 }
 
-/* .active {
-  background-color: #04AA6D;
-} */
+.link-home {
+  display: flex;
+  flex-direction: row;
+  align-items:flex-start;
+  justify-content: space-between;
+  padding-right: 30px;
+}
+
+.link-breed {
+  display: flex;
+  flex-direction: row;
+  align-items:flex-start;
+  justify-content: space-between;
+  padding-right: 30px;
+}
+
+.link-breed {
+  display: flex;
+  flex-direction: row;
+  align-items:flex-start;
+  justify-content: space-between;
+  padding-right: 30px;
+}
