--- a/client/src/components/Paginado/Paginado.css
+++ b/client/src/components/Paginado/Paginado.css
@@ -1,27 +1,30 @@
 .div-paginado {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
-    padding: 40px;
+    padding: 20px 0px 40px;
+    margin: 2%;
 }
 
-.btn-pag{
-    display: flex;
-    justify-content: space-evenly;
-}
-/*
-.boton-paginado {
-    border: 4px solid;
-    border: white;
-    background-color: #DC472F;
-    color: white;
-    font-size: 15px;
+.div-paginado button {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    border: 1.4px solid whitesmoke;
+    border-radius: 4px;
+  }
+
+.btn-pag :hover{
+    display: inline-flex;
+    justify-content: center;
+    cursor: pointer;
+    background-color: #4caf4fe0;
+    transition: all 500ms;
 }
 
 .boton-paginado:active {
     background-color: black;
     color: white;
+    transition: all 500ms;   
 }
 
-.boton-paginado:hover:not(.active) {
-    background-color: rgb(77, 41, 41);
-} */
