--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -28,3 +28,11 @@ body {
 .card-style{
     backdrop-filter: blur(5.5px);
 }
+
+.order-filter{
+    /* padding: 15px 0px; */
+    margin: 1.75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
