--- a/client/src/components/SearchBar/search.css
+++ b/client/src/components/SearchBar/search.css
@@ -8,6 +8,7 @@
     border-radius: 6px;
     font-family: "Audiowide", sans-serif;
     font-size: 16px;
+    letter-spacing: 1.5px;
     text-shadow: 1.6px 1.95px rgba(241, 235, 235, 0.753);
 }
 
@@ -38,4 +39,17 @@
   border-radius: 5px;
   text-shadow: 2.5px 2.3px rgba(20, 20, 20, 0.692);
   box-shadow: 4px 6px 6px rgba(0, 0, 0, 0.527);
+}
+
+.error {
+  color: red;
+  text-shadow: 1.6px 1.95px rgba(17, 13, 13, 0.753);
+  font-size: 22px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid white;
+  border-radius: 6px;
+  padding: 6px 15px;
+  margin: 8px 0;
+  background-color: rgba(165, 42, 42, 0.507);
 }
