--- a/client/src/components/Cards/SingleCard.css
+++ b/client/src/components/Cards/SingleCard.css
@@ -10,16 +10,17 @@
     border-radius: 4%;
     font-size: 16px;
     font-weight: 500;
+    letter-spacing: 1px;
     box-shadow: 5px 1px 10px rgba(68, 66, 66, 0.2);
-    height: 550px;
+    text-shadow: 1.8px 1.5px rgb(238, 225, 225);
+    height: 480px;
     width: 390px;
     transition: all 250ms ease;
 }
 .single-card:hover{
     box-shadow: 8px 1px 12px rgba(148, 147, 147, 0.664);  
-    transform: translateY(-2%);
-    filter:contrast(1.5)
-    /* opacity: 0.8; */
+    transform: translateY(-2.5%);
+    filter:contrast(1.55);
 }
 
 body {
@@ -28,5 +29,6 @@ body {
 
 .dog-img{
     border-radius: 12px;
+    margin-top: 25px;
     padding: 5px 8px 5px 8px;
 } 
