--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -77,21 +77,28 @@
   box-shadow: 8px 10px 12px rgba(0, 0, 0, 0.527);
 }
 
-/* BACKGROUND IMAGE FAILED */
-/* #bg {
-    position: fixed; 
-    top: -50%; 
-    left: -50%; 
-    width: 200%; 
-    height: 200%;
-  }
-  #bg img {
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    right: 0; 
-    bottom: 0; 
-    margin: auto; 
-    min-width: 50%;
-    min-height: 50%;
-  } */
+.buttons {
+  /* min-width: 200px; */
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
+.btn-create {
+  font-family: "Audiowide", sans-serif;
+  height: 50px;
+  width: 110px;
+  border: 1px solid white;
+  border-radius: 8px;
+  transition: all 500ms;
+}
+
+.buttons :hover{
+  background-color: #4caf4fd3;
+  color:black;
+  border-radius: 9px;
+  /* border: 1.5px solid black; */
+}
