--- a/client/src/components/Details/detail.css
+++ b/client/src/components/Details/detail.css
@@ -20,3 +20,28 @@
   background-size: cover;
   height: 100vh;
 }
+
+.btn {
+  border: none;
+  border-radius: 4px;
+  background-color: #009bcfcb;
+  box-shadow: 4px 6px 6px rgba(0, 0, 0, 0.527);
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Audiowide", sans-serif;
+  text-shadow: 1.5px 1.3px rgb(238, 225, 225);
+  transition:  all;/* usaba >>background-color font-size cursor text-shadow >> "all"*/
+  transition-duration: 0.7s;
+}
+
+.btn:hover {
+  background-color: #4caf4fd3;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  text-shadow: 2.5px 2.3px rgba(20, 20, 20, 0.692);
+  box-shadow: 8px 10px 12px rgba(0, 0, 0, 0.527);
+}
