--- a/client/src/components/Landing/landing.css
+++ b/client/src/components/Landing/landing.css
@@ -21,6 +21,7 @@ h2 {
     position:sticky;
     color:  #009bcfdc;
     text-shadow: 1.5px 1.3px rgb(255, 255, 255);
+    letter-spacing: 1.5px;
 }
 
 .link-home { 
