--- a/client/src/components/Paginado/Paginado.css
+++ b/client/src/components/Paginado/Paginado.css
@@ -3,6 +3,8 @@
     justify-content: center;
     padding: 20px 0px 40px;
     margin: 2%;
+    font-family: "Audiowide", sans-serif;
+
 }
 
 .div-paginado button {
@@ -12,19 +14,21 @@
     text-decoration: none;
     border: 1.4px solid whitesmoke;
     border-radius: 4px;
+    font-family: "Audiowide", sans-serif;
+
   }
 
 .btn-pag :hover{
     display: inline-flex;
     justify-content: center;
     cursor: pointer;
-    background-color: #4caf4fe0;
+    background-color: #4caf4fb7;
     transition: all 500ms;
 }
 
-.boton-paginado:active {
-    background-color: black;
-    color: white;
+.actual {
+    font-family: "Audiowide", sans-serif;
+    background-color: rgba(0, 0, 0, 0.644);
     transition: all 500ms;   
 }
 
