--- a/client/src/components/Cards/SingleCard.css
+++ b/client/src/components/Cards/SingleCard.css
@@ -1,21 +1,23 @@
 .single-card{
     text-decoration: none;
     color: black;
+    background-color: rgba(231, 231, 220, 0.603);
     display: flex; 
     flex-direction:column;
     justify-content:center;
     text-align: center;
     padding: 5px 15px 5px 10px;
-    border: 0.5px solid gray;
+    border: 2.5px solid rgba(247, 244, 244, 0.822);
     border-radius: 4%;
     font-size: 16px;
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: 1.75px;
     box-shadow: 5px 1px 10px rgba(68, 66, 66, 0.2);
     text-shadow: 1.8px 1.5px rgb(238, 225, 225);
-    height: 480px;
-    width: 390px;
+    height: 500px;
+    width: 420px;
     transition: all 250ms ease;
+    backdrop-filter: blur(9.5px);
 }
 .single-card:hover{
     box-shadow: 8px 1px 12px rgba(148, 147, 147, 0.664);  
