--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -57,7 +57,8 @@
   border-radius: 4px;
   background-color: #009bcfcb;
   box-shadow: 4px 6px 6px rgba(0, 0, 0, 0.527);
-  padding: 8px 20px;
+  padding: 8px 10px;
+  letter-spacing: 1.75px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
@@ -78,22 +79,24 @@
 }
 
 .buttons {
-  /* min-width: 200px; */
   display: grid;
   grid-template-columns: auto auto auto;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   justify-content: space-evenly;
   align-content: center;
+  letter-spacing: 1.75px;
+
 }
 
 .btn-create {
   font-family: "Audiowide", sans-serif;
-  height: 50px;
-  width: 110px;
+  height: 40px;
+  width: 150px;
   border: 1px solid white;
   border-radius: 8px;
   transition: all 500ms;
+  
 }
 
 .buttons :hover{
