--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -15,24 +15,22 @@ body {
   }
 
 .container-cards{
-    /* display:flex;
-    flex-wrap: wrap; */    
     display: grid;
-    grid-template-columns: auto auto ;
-    grid-column-gap: 50px;
-    grid-row-gap: 25px;
+    grid-template-columns: auto auto;
+    grid-column-gap: 30px;
+    grid-row-gap: 10px;
     justify-content: center;
-    
-}
 
-.card-style{
-    backdrop-filter: blur(5.5px);
 }
 
 .order-filter{
-    /* padding: 15px 0px; */
+    border: solid rgba(255, 0, 0, 0.651) 2.1px;
+    border-radius: 12px;
+    background-color: rgba(245, 245, 220, 0.603);
     margin: 1.75%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    padding: 15px 30px 5px 30px;
+    letter-spacing: 1.15px;
 }
