--- a/client/src/components/Details/detail.css
+++ b/client/src/components/Details/detail.css
@@ -16,10 +16,7 @@
     box-shadow: 3.9px 3.2px 3.2px rgba(238, 234, 234, 0.664);
 }
 
-.loading{
-  background: url(https://fondosmil.com/fondo/41802.jpg) no-repeat center center fixed;
-  background-size: cover;
-  height: 100vh;
+.name-loading{
   letter-spacing: 1.75px;
   font-size: 52px;
   text-shadow: 5.5px 5.3px rgba(20, 20, 20, 0.842);
@@ -37,7 +34,7 @@
   letter-spacing: 1.75px;
   font-family: "Audiowide", sans-serif;
   text-shadow: 1.5px 1.3px rgb(238, 225, 225);
-  transition:  all;/* usaba >>background-color font-size cursor text-shadow >> "all"*/
+  transition:  all; /* usaba >>background-color font-size cursor text-shadow >> "all"*/
   transition-duration: 0.7s;
 }
 
@@ -49,4 +46,89 @@
   border-radius: 5px;
   text-shadow: 2.5px 2.3px rgba(20, 20, 20, 0.692);
   box-shadow: 8px 10px 12px rgba(0, 0, 0, 0.527);
+}
+
+/* ----------------LOADING--------SPINER------------------------- */
+.lds-spinner,
+.lds-spinner div,
+.lds-spinner div:after {
+  box-sizing: border-box;
+}
+.lds-spinner {
+  color: currentColor;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3.2px;
+  left: 36.8px;
+  width: 6.4px;
+  height: 17.6px;
+  border-radius: 20%;
+  background: currentColor;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
